--- a/Estilos/areaUsuario.css
+++ b/Estilos/areaUsuario.css
@@ -46,7 +46,7 @@ header > a > img {
   position: absolute;
   cursor: pointer;
   right: 0%;
-  height: 100%;
+  height: 104%;
   background-image: linear-gradient(
     to right,
     rgb(150, 57, 226),
@@ -358,7 +358,7 @@ textarea {
   left: 50%;
   position: relative;
   transform: translate(-50%);
-  width: 8%;
+  width: 10%;
   font-weight: 600;
   font-size: 1.05rem;
   border-radius: 10px;
@@ -379,5 +379,37 @@ main {
 @media screen and (min-width: 1024px) and (max-width: 1440px) {
   #conteudo_opcoes_usuario {
     top: 35%;
+  }
+  #container_orçamento {
+    top: 53.5%;
+    left: 52.8%;
+    width: 90%;
+    height: 85;
+  }
+  #container_orçamento > form {
+    top: 3%;
+    gap: 1.3%;
+  }
+  #container_conjunto {
+    height: 4%;
+  }
+  #container_conjunto label {
+    font-size: 1.05rem;
+  }
+  #container_selecionar_tipo_vestimenta {
+    width: 60%;
+    height: 5%;
+  }
+  #container_tamanho_orcamento {
+    width: 60%;
+    height: 5%;
+    left: 50%;
+  }
+  form > p {
+    font-size: 1.5rem;
+  }
+  #container_cores_orçamento {
+    width: 60%;
+    height: 5%;
   }
 }
