--- a/Estilos/areaUsuario.css
+++ b/Estilos/areaUsuario.css
@@ -87,7 +87,7 @@ header > a > img {
 #nav_opcoes_usuario { 
   display: none;
   position: relative;
-  top: 32%;
+  top: 36%;
   width: 90%;
   height: 30%;
   transform: translate(0%, -50%);
@@ -296,27 +296,28 @@ form > p {
   font-weight: 600;
   text-align: center;
 }
-.label_tamanho_orcamento {
-  display: inline;
-  border: 2px solid rgba(255, 195, 247, 0.671);
+.label_tamanho_orcamento > div {
+  display: inline-block;
+  border: 1px solid rgba(255, 195, 247, 0.671);
   background-color: rgb(115, 44, 196);
   color: rgb(239, 230, 240);
   cursor: pointer;
   margin-right: 9px;
   font-size: 1rem;
+  width: 28px;
+  height: 22px;
   border-radius: 3px;
   transition-timing-function: ease;
   font-weight: 400;
 }
-#container_tamanho_orcamento  input[type="radio"]:checked + label {
-  font-size: 0.95rem;
-  box-shadow: 0px 0px 5px rgb(115, 0, 138);
-  font-weight: 600;
+#container_tamanho_orcamento  input[type="radio"]:checked + label > div {
+  width: 26px;
+  box-shadow: 0px 0px 8px rgb(212, 0, 255);
+  font-weight: 500;
 }
 .label_tamanho_orcamento:hover {
   font-weight: 600;
-  box-shadow: 0px 0px 2px rgba(31, 0, 46, 0.637);
-  transition-property: box-shadow;
+
 }
 #container_cores_orçamento {
   font-weight: 600;
