--- a/Estilos/index.css
+++ b/Estilos/index.css
@@ -1,12 +1,35 @@
 @charset "UTF-8";
+
 /* Estilização dos textos das caixas com peças de exemplo */
-.escrita_exibição_imagem_pecas {
+.escrita_exibição_imagem_nav {
   text-shadow: 0px 0px 10px black;
   text-align: center;
   position: relative;
   width: 100%;
-  top: 85%;
+  top: 89%;
   left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.escrita_exibição_imagem_nav h1,
+p {
+  margin: 2px 0px 0px 0px;
+}
+.escrita_exibição_imagem_nav h1 {
+  background-color: rgba(0, 0, 0, 0.2);
+  font-size: clamp(1.5em, 1em + 1vw, 2em);
+}
+.escrita_exibição_imagem_nav p {
+  background-color: rgba(0, 0, 0, 0.5);
+  font-size: clamp(1em, 0.5em + 0.5vw, 1.2em);
+}
+.escrita_exibição_imagem_pecas {
+  text-align: center;
+  position: absolute;
+  width: 100%;
+  top:92%;
+  left: 50%;
+  border-radius: 0px 0px 15px 15px;
   transform: translate(-50%, -50%);
 }
 
@@ -16,14 +39,28 @@ p {
 }
 .escrita_exibição_imagem_pecas h1 {
   background-color: rgba(0, 0, 0, 0.2);
-  font-size: clamp(1.5em, 1em + 1vw, 2em);
+  text-shadow: 0px 0px 10px black;
+  font-size: 1.5rem; 
+}
+div.preco_peca { 
+  color: rgb(41, 202, 41);
+  font-size: 1.8rem; 
+  position: absolute;
+  left: 50%;
+  transform: translate(-50%);
+  border: 1px solid white;
+  top: 100%;
+  width: 100.6%;
+  background-color: rgba(0, 0, 0, 0.659);
+  text-shadow: -1px 0px 1px rgb(15, 67, 20);
+  border-radius: 0px 0px 20px 20px;
 }
 .escrita_exibição_imagem_pecas p {
   background-color: rgba(0, 0, 0, 0.5);
-  font-size: clamp(1em, 0.5em + 0.5vw, 1.2em);
+  font-size: 1.3rem;
 }
 /* Container que abrange todas peças da página inicial*/
-div#pecas_home_container {
+form#pecas_home_container {
   position: absolute;
   top: 25%;
   height: 100%;
@@ -34,41 +71,55 @@ div#pecas_home_container {
   flex-wrap: wrap;
   gap: 1.8%;
 }
-@keyframes abrir_info {
-  0% { 
-    width: 17%;
-  }
-  100% { 
-    width: 50%;
-  }
-}
-.expanded_peca_home { 
-  border-radius: 15px 20px 20px 15px;
-  position: fixed;
-  width: 17%;
-  height: 50%;
-  background-color: aquamarine;
-  
-}
-.expanded_peca_home::selection { 
-  animation: abrir_info 1s ease 0.3 normal both;
-}
 /* Seletor das peças em conjunto */
 div.peca_home {
   flex-shrink: 0;
-  border-radius: 15px;
+  border-radius: 15px 15px 0px 0px;
   position: relative;
   border: 2px rgb(255, 255, 255) solid;
-  background-color: rgb(153, 143, 143);
+  background-color: rgba(0, 0, 0, 0.493);
   width: 245px;
-  height: 100%;
+  height: 40%;
   box-shadow: 1px 1px 8px rgba(0, 0, 0, 0.5);
   transition-duration: 0.3s;
   transition-timing-function: ease;
   display: block;
 }
 div.peca_home:hover {
-  scale: 105%;
+  scale: 108%;
+}
+.exibicao_hover_pecas {
+  display: none;
+  position: relative;
+}
+.exibicao_hover_pecas > p {
+  font-size: 2.5rem;
+  text-align: center;
+  height: 45px;
+  width: 45px;
+  position: absolute;
+  right: 3%;
+  border-radius: 50%;
+  background-color: rgba(5, 5, 5, 0.316);
+  text-shadow: -1px 0px 1px black;
+}
+.exibicao_hover_pecas  img {
+  height: 50px;
+  width: 50px;
+  position: absolute;
+  left: 3%;
+  top: 0%;
+  cursor: pointer;
+}
+#pecas_home_container input[type="checkbox"], #submit_pecas { 
+  display: none;
+}
+.exibicao_hover_pecas > img:hover {
+  scale: 102%;
+  filter: brightness(110%);
+}
+div.peca_home:hover > .exibicao_hover_pecas {
+  display: block;
 }
 /* Estilização do menu suspenso*/
 #nav_aberta input[type="checkbox"] {
@@ -82,7 +133,7 @@ div.peca_home:hover {
 }
 
 @media screen and (min-width: 1024px) and (max-width: 1440px) {
-  div#pecas_home_container {
+  form#pecas_home_container {
     top: 30%;
   }
   div.peca_home {
@@ -92,10 +143,6 @@ div.peca_home:hover {
     border: 2px rgb(255, 255, 255) solid;
     background-color: rgb(153, 143, 143);
     width: 245px;
-  }
-  .expanded_peca_home { 
-    position: relative;
-    height: 45%;
   }
 }
 @media screen and (min-width: 768px) and (max-width: 1024px) {
@@ -111,7 +158,7 @@ div.peca_home:hover {
     width: 150px;
     box-shadow: 1px 1px 8px rgba(0, 0, 0, 0.5);
   }
-  .expanded_peca_home { 
+  .expanded_peca_home {
     position: relative;
     height: 30%;
   }
