--- a/Estilos/Geral.css
+++ b/Estilos/Geral.css
@@ -11,6 +11,8 @@
 }
 /* Deixar o scroll mais leve e bonito*/
 * {
+  padding: 0;
+  margin: 0;
   scroll-behavior: smooth;
 }
 body {
@@ -81,23 +83,7 @@ header > a > img:hover {
   flex-grow: 0;
   text-align: justify;
 }
-.links_acesso a:hover {
-  scale: 102%;
-  transition-duration: 0.3s;
-  filter: brightness(130%);
-  transition-timing-function: ease;
-  border-radius: 20px;
-  border: 1px solid white;
-  box-shadow: 0px 0px 2px rgba(255, 255, 255, 0.7);
-  transition-property: scale, filter;
-  background-image: linear-gradient(
-    to right,
-    rgb(115, 0, 206),
-    rgb(121, 0, 196),
-    rgb(115, 0, 206)
-  );
-}
-.links_acesso div:hover, label:hover{
+.links_acesso > div:hover, .links_acesso > label:hover, .links_acesso > a:hover{ 
   cursor: pointer;
   scale: 102%;
   transition-duration: 0.3s;
@@ -188,9 +174,10 @@ nav:hover {
   filter: opacity(150%) grayscale(30%);
   transition-duration: 0.5s;
   transition-timing-function: ease;
+  transition-property: scale;
 }
 .imagem_exibição_nav:hover {
-  scale: 105%;
+  scale: 102%;
   box-shadow: 0px 0px 5px rgb(255, 255, 255);
   filter: opacity(100%) grayscale(0%);
 }
@@ -478,6 +465,7 @@ footer {
   background-color: rgb(255, 0, 60);
   position: fixed;
   bottom: 0%;
+  left: 1%;
   width: 26px;
   height: 26px;
 }
@@ -496,6 +484,8 @@ footer {
     rgb(90, 0, 200),
     rgb(100, 25, 220)
   );
+
+  text-align: center;
   border: 2px solid white;
   border-radius: 20px;
   box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.5);
@@ -512,8 +502,9 @@ footer {
   flex-direction: row;
 }
 #caixa_login h1 {
+  color: rgb(163, 34, 248);
   font-size: 5rem;
-  text-shadow: 2px 2px 2px black;
+  text-shadow: -1px 0px 5px rgb(0, 0, 0);
   letter-spacing: 5px;
   font-family: "luckiest", Arial, Helvetica, sans-serif;
 }
