--- a/Estilos/areaUsuario.css
+++ b/Estilos/areaUsuario.css
@@ -1,5 +1,5 @@
 @font-face {
-  font-family: 'bebas';
+  font-family: "bebas";
   src: url(../fontes/BebasNeue-Regular.ttf);
 }
 /* parte de cima e logo */
@@ -18,12 +18,17 @@ header {
 }
 header > a > img {
   position: absolute;
+  top: 50%;
   height: 81px;
   width: 95px;
 }
 /* Menu de navegação entre as paginas */
-#links_acesso {
+.links_acesso {
   top: 50%;
+}
+.links_acesso img {
+  height: 70px;
+  width: 70px;
 }
 /* menu lateral com as opções do usuario */
 #opções_usuário {
@@ -60,8 +65,7 @@ header > a > img {
 #opções_usuário_abrir_fechar:hover {
   background-image: linear-gradient(
     to right,
-    rgb(164, 69, 247)
-    rgb(144, 42, 211),
+    rgb(164, 69, 247) rgb(144, 42, 211),
     rgb(164, 69, 247)
   );
 }
@@ -84,7 +88,7 @@ header > a > img {
   align-items: center;
 }
 /* opções de pagina do usuário*/
-#nav_opcoes_usuario { 
+#nav_opcoes_usuario {
   display: none;
   position: relative;
   top: 36%;
@@ -103,31 +107,40 @@ header > a > img {
   height: 100%;
   color: rgb(255, 255, 255);
   list-style-type: none;
-  margin:0;
+  margin: 0;
   padding: 0;
   text-indent: 0;
   gap: 1%;
 }
-#nav_opcoes_usuario > ul > li { 
+#nav_opcoes_usuario li {
   font-size: 1.8rem;
   border-radius: 8px;
-  font-family: 'bebas', Arial, Helvetica, sans-serif;
+  font-family: "bebas", Arial, Helvetica, sans-serif;
   letter-spacing: 2px;
-  font-weight:  400;
+  font-weight: 400;
   text-shadow: -1px 1px 5px black;
   border: 3px solid rgb(15, 0, 58);
   width: 50%;
+
+  box-shadow: -2px 2px 5px rgba(0, 0, 0, 0.575);
+  transition-duration: 0.2s;
+  transition-timing-function: ease;
+}
+li#optorcamento {
   background-image: linear-gradient(
     to right,
     rgb(100, 0, 182),
     rgba(110, 0, 196, 0.98),
     rgb(100, 0, 182)
   );
-  box-shadow: -2px 2px 5px rgba(0, 0, 0, 0.575);
-  transition-duration: .2s;
-  transition-timing-function: ease;
 }
-#nav_opcoes_usuario > ul > li:hover { 
+li#optvirarparceiro {
+  background-color: rgb(163, 126, 2);
+}
+li#optexcluirconta {
+  background-color: red;
+}
+#nav_opcoes_usuario > ul > li:hover {
   cursor: pointer;
   scale: 105%;
   border: 3px solid rgb(25, 7, 73);
@@ -163,14 +176,15 @@ header > a > img {
   box-shadow: 2px 3px 3px rgba(0, 0, 0, 0.5);
 }
 #caixa_arquivo_input:hover {
-  scale: 102%;
-  background-color: white;
+  scale: 101%;
+  background-color: rgba(255, 255, 255, 0.95);
   transition-timing-function: scale;
   transition-duration: 0.2s;
   transition-timing-function: ease;
 }
 /* Container de orçamento de opções */
-#container_orçamento {
+
+#container_conteudo {
   position: relative;
   z-index: 0;
   top: 53.5%;
@@ -196,10 +210,10 @@ header > a > img {
   text-shadow: -2px 2px 2px rgba(255, 98, 255, 0.842);
   letter-spacing: 2.5px;
 }
-#container_orçamento > form label {
+#container_conteudo > form label {
   text-shadow: -1px 0px 2px rgba(255, 98, 255, 0.842);
 }
-#container_orçamento > form {
+#container_conteudo > form {
   position: relative;
   top: 3%;
   display: flex;
@@ -246,7 +260,7 @@ header > a > img {
   background-color: rgba(252, 235, 255, 0.582);
   font-family: Arial, Helvetica, sans-serif;
 }
-#container_conjunto >  input[type="checkbox"] {
+#container_conjunto > input[type="checkbox"] {
   display: none;
   font-family: Arial, Helvetica, sans-serif;
 }
@@ -281,7 +295,7 @@ select optgroup {
   left: 50%;
   transform: translate(-50%);
 }
-fieldset { 
+fieldset {
   border: 0px;
 }
 form > p {
@@ -310,14 +324,13 @@ form > p {
   transition-timing-function: ease;
   font-weight: 400;
 }
-#container_tamanho_orcamento  input[type="radio"]:checked + label > div {
+#container_tamanho_orcamento input[type="radio"]:checked + label > div {
   width: 26px;
   box-shadow: 0px 0px 8px rgb(212, 0, 255);
   font-weight: 500;
 }
 .label_tamanho_orcamento:hover {
   font-weight: 600;
-
 }
 #container_cores_orçamento {
   font-weight: 600;
@@ -352,10 +365,10 @@ textarea {
   transform: translate(-50%);
   resize: none;
 }
-#container_orçamento input[type="submit"] {
+#container_conteudo input[type="submit"] {
   background-color: rgb(90, 7, 185);
 }
-.botaofimorcamento { 
+.botaofimorcamento {
   left: 50%;
   position: relative;
   transform: translate(-50%);
@@ -366,7 +379,7 @@ textarea {
   color: white;
   border: 2px solid rgb(79, 3, 88);
 }
-#container_orçamento input[type="reset"] {
+#container_conteudo input[type="reset"] {
   background-color: rgb(112, 2, 75);
 }
 textarea:focus {
@@ -381,13 +394,13 @@ main {
   #conteudo_opcoes_usuario {
     top: 35%;
   }
-  #container_orçamento {
+  #container_conteudo {
     top: 53.5%;
     left: 52.8%;
     width: 90%;
     height: 85;
   }
-  #container_orçamento > form {
+  #container_conteudo > form {
     top: 3%;
     gap: 1.3%;
   }
