--- a/Estilos/artista.css
+++ b/Estilos/artista.css
@@ -4,7 +4,7 @@
   top: 1%;
   display: flex;
   flex-direction: column;
-  gap: 5%;
+  gap: 3%;
   height: 2800px;
 }
 /* Imagem do autor */
@@ -24,9 +24,8 @@
   left: 50%;
   transform: translate(-50%);
   width: 95%;
-  height: 660px;
+  height: 25%;
   overflow-y: auto;
-
   text-overflow: ellipsis;
 }
 #flex-container > div:hover {
@@ -45,16 +44,18 @@
 }
 /* Texto do artista*/
 #flex-container > div > .texto-artista > p {
-  font-size: clamp(1rem, 2.1rem, 5rem);
+  position: relative;
+  bottom: 0%;
+  font-size: 2.22rem;
   letter-spacing: 1px;
-  font-weight: 400;
+  font-weight: 500;
   text-shadow: 1px 1px 2px black;
   background-color: rgba(0, 0, 0, 0.938);
 }
 .texto-artista {
   position: absolute;
   height: 20%;
-  bottom: 0.4px;
+  bottom: 0;
 }
 /* Imagem do artista */
 .imagem_do_artista {
@@ -65,5 +66,5 @@
   border: 2px solid white;
   background-color: black;
   height: 58%;
-  width: 60%;
+  width: 80%;
 }
