--- a/Estilos/index.css
+++ b/Estilos/index.css
@@ -55,9 +55,7 @@ p {
   width: 20px;
   height: 20px;
 }
-div.preco_peca { 
-  color: rgb(41, 202, 41);
-  font-size: 1.8rem; 
+.preco_peca { 
   position: absolute;
   left: 50%;
   transform: translate(-50%);
@@ -67,6 +65,14 @@ div.preco_peca {
   background-color: rgb(0, 0, 0);
   text-shadow: -1px 0px 1px rgb(15, 67, 20);
   border-radius: 0px 0px 20px 20px;
+}
+.preco_peca > input { 
+  text-align: center;
+  color: rgb(41, 202, 41);
+  font-size: 1.8rem; 
+  border-radius: 0px 0px 20px 20px;
+  width: 98%;
+  background-color: rgb(0, 0, 0);
 }
 .escrita_exibição_imagem_pecas p {
   background-color: rgba(0, 0, 0, 0.5);
@@ -166,7 +172,7 @@ div.peca_home:hover > .exibicao_hover_pecas {
   .escrita_exibição_imagem_pecas {
     top: 87%;
   }
-  div.preco_peca { 
+  preco_peca { 
     top: 110%;
 
   }
