--- a/Estilos/Geral.css
+++ b/Estilos/Geral.css
@@ -83,7 +83,9 @@ header > a > img:hover {
   flex-grow: 0;
   text-align: justify;
 }
-.links_acesso > div:hover, .links_acesso > label:hover, .links_acesso > a:hover{ 
+.links_acesso > div:hover,
+.links_acesso > label:hover,
+.links_acesso > a:hover {
   cursor: pointer;
   scale: 102%;
   transition-duration: 0.3s;
@@ -457,7 +459,7 @@ footer {
   box-shadow: 0px 1px 5px rgba(0, 0, 0, 0.486);
   text-align: center;
   transition-timing-function: ease;
-  transition-duration: .5s;
+  transition-duration: 0.5s;
 }
 /* Botão de abrir/fechar os créditos */
 #creditos_toggle {
@@ -755,4 +757,14 @@ input[type="button"]:hover {
     transition-duration: 0.3s;
     transition-property: scale;
   }
+}
+#formulario > ul {
+  font-size: 1.3rem;
+  text-shadow: -1px 1px 3px black;
+  text-indent: 0%;
+  list-style-type: square;
+  padding: 0;
+  margin: 0;
+  color: white;
+  text-align: start;
 }
