--- a/Estilos/index.css
+++ b/Estilos/index.css
@@ -113,20 +113,22 @@ div.peca_home:hover {
 }
 .exibicao_hover_pecas > p {
   font-size: 2.5rem;
-  text-align: center;
-  height: 45px;
-  width: 45px;
+  height: 50px;
+  width: 50px;
   position: absolute;
-  right: 3%;
+  right: 5%;
   border-radius: 50%;
-  background-color: rgba(5, 5, 5, 0.316);
+  background-color: rgba(48, 25, 25, 0.316);
   text-shadow: -1px 0px 1px black;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 .exibicao_hover_pecas img {
   height: 50px;
   width: 50px;
   position: absolute;
-  left: 3%;
+  left: 5%;
   top: 0%;
   cursor: pointer;
 }
