--- a/Estilos/carrinho.css
+++ b/Estilos/carrinho.css
@@ -1,5 +1,5 @@
 body {
-  overflow-x: hidden;
+  overflow: hidden;
 }
 header {
   height: 10%;
@@ -20,17 +20,17 @@ header > a > img {
 /*container que abrange a caixa onde estão posicionados os itens do carrinho */
 #container_itens_carrinho {
   position: absolute;
-  top: 1%;
+  top: 45%;
   left: 50%;
-  transform: translate(-50%, 0%);
+  transform: translate(-50%, -50%);
   background-image: linear-gradient(
     to right,
     rgb(60, 0, 109),
     rgba(60, 0, 109, 0.918),
     rgb(60, 0, 109)
   );
-  height: 86.5%;
-  width: 65%;
+  height: 82%;
+  width: 57%;
   box-shadow: 0px 0px 10px black;
   border: 1px solid black;
   border-radius: 15px 15px 15px 15px;
@@ -39,6 +39,7 @@ header > a > img {
 #header_itens {
   position: relative;
   height: 10%;
+  font-size: 1.7rem;
   text-shadow: -1px 4px 3px black;
   background-image: linear-gradient(
     to right,
@@ -52,8 +53,6 @@ header > a > img {
 }
 #conteudo_itens_carrinho {
   width: 100%;
-  display: flex;
-  flex-direction: column;
   gap: 1%;
   height: 100%;
   overflow-y: auto;
@@ -62,6 +61,7 @@ header > a > img {
 #extrato_final {
   position: fixed;
   bottom: 0%;
+  left: 0%;
   background-image: linear-gradient(
     to right,
     rgb(131, 18, 224),
@@ -69,26 +69,51 @@ header > a > img {
     rgb(131, 18, 224)
   );
   width: 100%;
-  height: 16%;
+  height: 13%;
   border-radius: 0px 0px 15px 15px;
 }
 #extrato_final > div {
   width: 100%;
+  font-size: 0.7rem;
 }
 #extrato_final_finalizar > input[type="submit"] {
   border-radius: 20px;
-  font-size: 1.3rem;
-  width: 20%;
+  font-size: 1rem;
+  width: 18%;
   background-color: rgb(9, 172, 9);
   color: white;
   text-shadow: -1px 2px 5px rgba(0, 0, 0, 0.76);
 }
 
-.preco_item_valor { 
+.preco_item_valor {
   color: rgb(17, 216, 17);
   text-shadow: -1px 0px 3px black;
 }
 #totalpagar {
   color: rgb(5, 197, 5);
   text-shadow: -1px 0px 3px black;
+}
+form {
+  display: grid;
+  height: 68%;
+  grid-template-columns: auto auto;
+  justify-items: center;
+  overflow-y: auto;
+}
+.blocoitem {
+  width: 100%;
+}
+.blocoitem h1 {
+  font-size: 1.7rem;
+}
+form input,
+select {
+  font-size: 1.4rem;
+  width: 70%;
+  border-radius: 6px;
+  text-indent: 1%;
+}
+form select,
+input[type="date"] {
+  cursor: pointer;
 }
