--- a/Estilos/index.css
+++ b/Estilos/index.css
@@ -27,7 +27,7 @@ p {
   text-align: center;
   position: absolute;
   width: 100%;
-  top:92%;
+  top: 92%;
   left: 50%;
   border-radius: 0px 0px 15px 15px;
   transform: translate(-50%, -50%);
@@ -40,10 +40,10 @@ p {
 .escrita_exibição_imagem_pecas h1 {
   background-color: rgba(0, 0, 0, 0.2);
   text-shadow: 0px 0px 10px black;
-  font-size: 1.5rem; 
+  font-size: 1.5rem;
 }
 
-#label_submitpecas > p { 
+#label_submitpecas > p {
   display: flex;
   position: absolute;
   bottom: 0;
@@ -55,7 +55,7 @@ p {
   width: 20px;
   height: 20px;
 }
-.preco_peca { 
+.preco_peca {
   position: absolute;
   left: 50%;
   transform: translate(-50%);
@@ -66,10 +66,10 @@ p {
   text-shadow: -1px 0px 1px rgb(15, 67, 20);
   border-radius: 0px 0px 20px 20px;
 }
-.preco_peca > input { 
+.preco_peca > input {
   text-align: center;
   color: rgb(41, 202, 41);
-  font-size: 1.8rem; 
+  font-size: 1.8rem;
   border-radius: 0px 0px 20px 20px;
   width: 98%;
   background-color: rgb(0, 0, 0);
@@ -132,24 +132,28 @@ div.peca_home:hover {
   top: 0%;
   cursor: pointer;
 }
-.exibicao_hover_pecas > input[type="number"] { 
+.exibicao_hover_pecas > input[type="number"] {
   position: absolute;
-  top: 50PX;
+  top: 50px;
   left: 3%;
   width: 50px;
   height: 10px;
 }
-#pecas_home_container input[type="checkbox"]:checked + .peca_home  { 
+#pecas_home_container input[type="checkbox"]:checked + .peca_home {
   border: 2px solid rgb(1, 173, 1);
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.466);
 }
-#pecas_home_container input[type="checkbox"]:checked + .peca_home:hover { 
+#pecas_home_container input[type="checkbox"]:checked + .peca_home:hover {
   scale: 100%;
 }
-#pecas_home_container input[type="checkbox"]:checked + .peca_home > .exibicao_hover_pecas{ 
+#pecas_home_container
+  input[type="checkbox"]:checked
+  + .peca_home
+  > .exibicao_hover_pecas {
   display: block;
 }
-#pecas_home_container input[type="checkbox"], #submit_pecas { 
+#pecas_home_container input[type="checkbox"],
+#submit_pecas {
   display: none;
 }
 
@@ -174,9 +178,8 @@ div.peca_home:hover > .exibicao_hover_pecas {
   .escrita_exibição_imagem_pecas {
     top: 87%;
   }
-  preco_peca { 
+  preco_peca {
     top: 110%;
-
   }
 }
 @media screen and (min-width: 768px) and (max-width: 1024px) {
@@ -186,7 +189,6 @@ div.peca_home:hover > .exibicao_hover_pecas {
   div#pecas_home_container {
     top: 25%;
   }
-  
 }
 @media screen and (min-width: 320px) and (max-width: 768px) {
   div.peca_home {
