--- a/Estilos/index.css
+++ b/Estilos/index.css
@@ -42,7 +42,52 @@ p {
   text-shadow: 0px 0px 10px black;
   font-size: 1.5rem;
 }
+.imagem_exibição_nav {
+  margin: 0px 10px 0px 10px;
+  flex-shrink: 0;
+  flex-grow: 1;
+  position: relative;
+  border: 2px solid white;
+  border-radius: 10px;
+  width: 179px;
+  height: 95%;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.705);
+  font-family: arial;
+  filter: opacity(150%) grayscale(30%);
+  transition-duration: 0.5s;
+  transition-timing-function: ease;
+  transition-property: scale;
+}
+.imagem_exibição_nav:hover {
+  scale: 102%;
+  box-shadow: 0px 0px 5px rgb(255, 255, 255);
+  filter: opacity(100%) grayscale(0%);
+}
+.escrita_exibição_imagem_nav {
+  text-shadow: 0px 0px 10px black;
+  text-align: center;
+  position: relative;
+  width: 100%;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%);
+}
 
+.escrita_exibição_imagem_nav h1,
+p {
+  margin: 2px 0px 0px 0px;
+}
+.escrita_exibição_imagem_nav h1 {
+  background-color: rgba(0, 0, 0, 0.2);
+  font-size: clamp(1.5em, 1em + 1vw, 2em);
+}
+.escrita_exibição_imagem_nav p {
+  background-color: rgba(0, 0, 0, 0.5);
+  font-size: clamp(1em, 0.5em + 0.5vw, 1.2em);
+}
 #label_submitpecas > p {
   display: flex;
   position: absolute;
@@ -58,10 +103,10 @@ p {
 .preco_peca {
   position: absolute;
   left: 50%;
+  top: 100%;
   transform: translate(-50%);
   border: 1px solid white;
-  top: 100%;
-  width: 100.6%;
+  width: 100%;
   background-color: rgb(0, 0, 0);
   text-shadow: -1px 0px 1px rgb(15, 67, 20);
   border-radius: 0px 0px 20px 20px;
@@ -173,13 +218,10 @@ div.peca_home:hover > .exibicao_hover_pecas {
 
 @media screen and (min-width: 1024px) and (max-width: 1440px) {
   form#pecas_home_container {
-    top: 30%;
+    top: 25%;
   }
   .escrita_exibição_imagem_pecas {
     top: 87%;
-  }
-  preco_peca {
-    top: 110%;
   }
 }
 @media screen and (min-width: 768px) and (max-width: 1024px) {
