--- a/Estilos/artista.css
+++ b/Estilos/artista.css
@@ -57,6 +57,9 @@
   height: 20%;
   bottom: 0;
 }
+#nav_aberta {
+  gap: 1.5%;
+}
 /* Imagem do artista */
 .imagem_do_artista {
   position: absolute;
@@ -67,4 +70,51 @@
   background-color: black;
   height: 58%;
   width: 80%;
+}
+.imagem_exibição_nav {
+  margin: 0px 10px 0px 10px;
+  flex-shrink: 0;
+  flex-grow: 1;
+  position: relative;
+  border: 2px solid white;
+  margin-left: 1.5%;
+  border-radius: 10px;
+  width: 179px;
+  height: 95%;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.705);
+  font-family: arial;
+  filter: opacity(150%) grayscale(30%);
+  transition-duration: 0.5s;
+  transition-timing-function: ease;
+  transition-property: scale;
+}
+.imagem_exibição_nav:hover {
+  scale: 102%;
+  box-shadow: 0px 0px 5px rgb(255, 255, 255);
+  filter: opacity(100%) grayscale(0%);
+}
+.escrita_exibição_imagem_nav {
+  text-shadow: 0px 0px 10px black;
+  text-align: center;
+  position: relative;
+  width: 100%;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%);
+}
+
+.escrita_exibição_imagem_nav h1,
+p {
+  margin: 2px 0px 0px 0px;
+}
+.escrita_exibição_imagem_nav h1 {
+  background-color: rgba(0, 0, 0, 0.2);
+  font-size: clamp(1.5em, 1em + 1vw, 2em);
+}
+.escrita_exibição_imagem_nav p {
+  background-color: rgba(0, 0, 0, 0.5);
+  font-size: clamp(1em, 0.5em + 0.5vw, 1.2em);
 }
