--- a/Estilos/areaUsuario.css
+++ b/Estilos/areaUsuario.css
@@ -2,7 +2,7 @@
   font-family: "bebas";
   src: url(../fontes/BebasNeue-Regular.ttf);
 }
-body { 
+body {
   overflow-y: hidden;
 }
 /* parte de cima e logo */
@@ -224,7 +224,7 @@ li#optexcluirconta {
   height: 100%;
   width: 100%;
 }
-#container_conjunto {
+#container_data1 {
   cursor: pointer;
   color: rgb(115, 44, 196);
   font-weight: 700;
@@ -241,11 +241,11 @@ li#optexcluirconta {
   left: 50%;
   transform: translate(-50%);
 }
-#container_conjunto label {
+#container_data1 label {
   font-size: 1.15rem;
   cursor: pointer;
 }
-#container_selecionar_tipo_vestimenta {
+#container_data2 {
   color: rgb(115, 44, 196);
   font-weight: 600;
   border: 2px solid rgb(152, 0, 190);
@@ -262,11 +262,11 @@ li#optexcluirconta {
   background-color: rgba(252, 235, 255, 0.582);
   font-family: Arial, Helvetica, sans-serif;
 }
-#container_conjunto > input[type="checkbox"] {
+#container_data1 > input[type="checkbox"] {
   display: none;
   font-family: Arial, Helvetica, sans-serif;
 }
-#nome_usuario { 
+#nome_usuario {
   font-size: 2.5rem;
 }
 select {
@@ -285,7 +285,7 @@ select:focus {
 select optgroup {
   background-color: rgb(90, 14, 141);
 }
-#container_tamanho_orcamento {
+#container_data3 {
   font-weight: 800;
   border: 2px solid rgb(152, 0, 190);
   border-radius: 5px;
@@ -308,10 +308,10 @@ form > p {
   font-weight: 600;
   font-size: 1.7rem;
 }
-#container_tamanho_orcamento > fieldset > input[type="radio"] {
+#container_data3 > fieldset > input[type="radio"] {
   display: none;
 }
-#container_tamanho_orcamento > label {
+#container_data3 > label {
   font-weight: 600;
   text-align: center;
 }
@@ -330,7 +330,7 @@ form > p {
   border-radius: 8px;
   font-weight: 400;
 }
-#container_tamanho_orcamento input[type="radio"]:checked + label > div {
+#container_data3 input[type="radio"]:checked + label > div {
   width: 26px;
   box-shadow: 0px 0px 5px rgb(212, 0, 255);
   font-weight: 500;
@@ -338,7 +338,7 @@ form > p {
 .label_tamanho_orcamento:hover {
   font-weight: 600;
 }
-#container_cores_orçamento {
+#container_data4 {
   font-weight: 600;
   border: 2px solid rgb(152, 0, 190);
   border-radius: 5px;
@@ -354,7 +354,7 @@ form > p {
   transform: translate(-50%);
   color: rgb(115, 44, 196);
 }
-#container_cores_orçamento input {
+#container_data4 input {
   margin: 0px 10px 0px 10px;
   position: relative;
 }
@@ -412,17 +412,17 @@ main {
     top: 3%;
     gap: 1.3%;
   }
-  #container_conjunto {
+  #container_data1 {
     height: 4%;
   }
-  #container_conjunto label {
+  #container_data1 label {
     font-size: 1.05rem;
   }
-  #container_selecionar_tipo_vestimenta {
+  #container_data2 {
     width: 60%;
     height: 5%;
   }
-  #container_tamanho_orcamento {
+  #container_data3 {
     width: 60%;
     height: 5%;
     left: 50%;
@@ -430,7 +430,7 @@ main {
   form > p {
     font-size: 1.5rem;
   }
-  #container_cores_orçamento {
+  #container_data4 {
     width: 60%;
     height: 5%;
   }
