--- a/Estilos/index.css
+++ b/Estilos/index.css
@@ -6,7 +6,7 @@
   text-align: center;
   position: relative;
   width: 100%;
-  top: 89%;
+  top: 100%;
   left: 50%;
   transform: translate(-50%, -50%);
 }
@@ -27,7 +27,7 @@ p {
   text-align: center;
   position: absolute;
   width: 100%;
-  top: 92%;
+  top: 100%;
   left: 50%;
   border-radius: 0px 0px 15px 15px;
   transform: translate(-50%, -50%);
@@ -126,24 +126,26 @@ p {
 /* Container que abrange todas peças da página inicial*/
 form#pecas_home_container {
   position: absolute;
-  top: 25%;
   height: 100%;
   width: 100%;
+  top: 30%;
   display: flex;
   flex-direction: row;
   justify-content: center;
   flex-wrap: wrap;
-  gap: 1.8%;
+  justify-content: center;
+  gap: 2%;
 }
 /* Seletor das peças em conjunto */
 div.peca_home {
   flex-shrink: 0;
+  margin-top: 3%;
   border-radius: 15px 15px 0px 0px;
   position: relative;
-  border: 2px rgb(255, 255, 255) solid;
+  border: 1px rgb(255, 255, 255) solid;
   background-color: rgba(0, 0, 0, 0.493);
-  width: 245px;
-  height: 40%;
+  width: 20%;
+  height: 45%;
   box-shadow: 1px 1px 8px rgba(0, 0, 0, 0.5);
   transition-duration: 0.3s;
   transition-timing-function: ease;
@@ -185,7 +187,7 @@ div.peca_home:hover {
   height: 10px;
 }
 #pecas_home_container input[type="checkbox"]:checked + .peca_home {
-  border: 2px solid rgb(1, 173, 1);
+  border: 1px solid rgb(1, 173, 1);
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.466);
 }
 #pecas_home_container input[type="checkbox"]:checked + .peca_home:hover {
@@ -217,9 +219,6 @@ div.peca_home:hover > .exibicao_hover_pecas {
 }
 
 @media screen and (min-width: 1024px) and (max-width: 1440px) {
-  form#pecas_home_container {
-    top: 25%;
-  }
   .escrita_exibição_imagem_pecas {
     top: 87%;
   }
