--- a/Estilos/Geral.css
+++ b/Estilos/Geral.css
@@ -20,6 +20,7 @@ body {
   margin: 0%;
   background-color: rgb(30, 29, 44);
   font-family: arial;
+  overflow: hidden;
 }
 /* Personalização da ScrollBar */
 ::-webkit-scrollbar {
@@ -54,7 +55,7 @@ header > a > img {
   height: 86px;
   width: 100px;
   left: 50%;
-  top: 40%;
+  top: 50%;
   z-index: 1;
   transform: translate(-50%, -50%);
   filter: brightness(130%);
@@ -68,7 +69,7 @@ header > a > img:hover {
 /* Menu de acesso a outras páginas*/
 .links_acesso {
   position: absolute;
-  top: 40%;
+  top: 50%;
   right: 0.4%;
   transform: translate(-0%, -50%);
   display: flex;
@@ -120,7 +121,7 @@ nav {
     rgb(0, 0, 220)
   );
   width: 100%;
-  height: 18%;
+  height: 14%;
   position: absolute;
   bottom: 0px;
   box-shadow: inset 0px 0px 2px rgba(0, 0, 0, 0.459);
@@ -172,6 +173,7 @@ main {
   width: 100%;
   height: 100vh;
   color: white;
+  overflow-y: auto;
 }
 main > h1 {
   margin: 60px 0px 0px 0px;
@@ -682,6 +684,52 @@ input[type="button"]:hover {
   }
 }
 @media screen and (min-width: 1024px) and (max-width: 1440px) {
+  ----
+      
+  main > h1 {
+    margin: 60px 0px 0px 0px;
+  }
+  #caixa_login {
+    width: 55%;
+    height: 95%;
+  }
+  #caixa_login form {
+    top: 56%;
+  }
+  #caixa_login h1 {
+    color: rgb(195, 0, 255);
+    font-size: 4rem;
+    text-shadow: -2px 3px 10px rgba(0, 0, 0, 0.795);
+    letter-spacing: 5px;
+    font-family: "luckiest", Arial, Helvetica, sans-serif;
+  }
+  #caixa_login form > label {
+    display: inline-block;
+    cursor: pointer;
+  }
+  #container_revelarsenha {
+    color: white;
+    font-size: 1.1rem;
+  }
+  #container_revelarsenha > input {
+    scale: 120%;
+  }
+  #caixa_login input[type="text"],
+  input[type="password"] {
+    margin-bottom: 5px;
+
+    border: 1px solid rgba(0, 0, 0, 0.5);
+    width: 80%;
+    height: 25px;
+  }
+  #caixa_login #container_botoes > input {
+    margin-bottom: 5px;
+    font-size: 1.1rem;
+    border: 1px solid black;
+    width: 100%;
+    height: 25px;
+  }
+  
   .links_acesso img {
     width: 65px;
     height: 60px;
