--- a/Estilos/areaUsuario.css
+++ b/Estilos/areaUsuario.css
@@ -400,13 +400,16 @@ main {
 }
 @media screen and (min-width: 1024px) and (max-width: 1440px) {
   #conteudo_opcoes_usuario {
-    top: 35%;
+    top: 40%;
   }
   #container_conteudo {
     top: 53.5%;
     left: 52.8%;
     width: 90%;
     height: 85;
+  }
+  #nav_opcoes_usuario {
+    top: 28%;
   }
   #container_conteudo > form {
     top: 3%;
