--- a/Estilos/Geral.css
+++ b/Estilos/Geral.css
@@ -52,8 +52,8 @@ header {
 /* Logo da empresa*/
 header > a > img {
   position: absolute;
-  height: 86px;
-  width: 100px;
+  height: 80px;
+  width: 89px;
   left: 50%;
   top: 50%;
   z-index: 1;
@@ -165,13 +165,13 @@ nav:hover {
 
 /* Inicio do conteúdo principal */
 main {
-  top: 60%;
+  top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
   text-align: center;
   position: absolute;
   width: 100%;
-  height: 100vh;
+  height: 100%;
   color: white;
   overflow-y: auto;
 }
@@ -684,10 +684,8 @@ input[type="button"]:hover {
   }
 }
 @media screen and (min-width: 1024px) and (max-width: 1440px) {
-  ----
-      
   main > h1 {
-    margin: 60px 0px 0px 0px;
+    margin: 110px 0px 0px 0px;
   }
   #caixa_login {
     width: 55%;
@@ -731,16 +729,17 @@ input[type="button"]:hover {
   }
   
   .links_acesso img {
-    width: 65px;
-    height: 60px;
+    width: 60px;
+    height: 55px;
   }
 
   #caixa_suporte > h1 {
     top: 1%;
   }
 
-  #container_botoes_suporte {
-    height: 15%;
+  
+  #container_botoes_suporte > button { 
+    height: 65%;
   }
   #container_mensagens {
     top: 45%;
@@ -772,14 +771,15 @@ input[type="button"]:hover {
     transition-duration: 0.3s;
     transition-property: scale;
   }
+  #formulario > ul {
+    font-size: 1.3rem;
+    text-shadow: -1px 1px 3px black;
+    text-indent: 0%;
+    list-style-type: square;
+    padding: 0;
+    margin: 0;
+    color: white;
+    text-align: start;
+  }
 }
-#formulario > ul {
-  font-size: 1.3rem;
-  text-shadow: -1px 1px 3px black;
-  text-indent: 0%;
-  list-style-type: square;
-  padding: 0;
-  margin: 0;
-  color: white;
-  text-align: start;
-}
+
