--- a/Estilos/carrinho.css
+++ b/Estilos/carrinho.css
@@ -1,6 +1,9 @@
 body {
   overflow: hidden;
 }
+main { 
+  overflow: hidden;
+}
 header {
   height: 10%;
 }
@@ -8,19 +11,19 @@ header {
   top: 50%;
 }
 .links_acesso img {
-  height: 70px;
-  width: 70px;
+  height: 55px;
+  width: 55px;
 }
 header > a > img {
   position: absolute;
   top: 50%;
-  height: 76px;
-  width: 90px;
+  height: 60px;
+  width: 74px;
 }
 /*container que abrange a caixa onde estão posicionados os itens do carrinho */
 #container_itens_carrinho {
-  position: absolute;
-  top: 45%;
+  position: relative;
+  top: 54.5%;
   left: 50%;
   transform: translate(-50%, -50%);
   background-image: linear-gradient(
@@ -30,7 +33,7 @@ header > a > img {
     rgb(60, 0, 109)
   );
   height: 85%;
-  width: 60%;
+  width: 65%;
   box-shadow: 0px 0px 10px black;
   border: 1px solid black;
   border-radius: 15px 15px 15px 15px;
@@ -69,7 +72,7 @@ header > a > img {
     rgb(131, 18, 224)
   );
   width: 100%;
-  height: 15%;
+  height: 14%;
   border-radius: 0px 0px 15px 15px;
 }
 #extrato_final > div {
