--- a/Estilos/index.css
+++ b/Estilos/index.css
@@ -125,10 +125,9 @@ p {
 }
 /* Container que abrange todas peças da página inicial*/
 form#pecas_home_container {
-  position: absolute;
+  position: relative;
   height: 100%;
   width: 100%;
-  top: 30%;
   display: flex;
   flex-direction: row;
   justify-content: center;
@@ -221,6 +220,9 @@ div.peca_home:hover > .exibicao_hover_pecas {
 @media screen and (min-width: 1024px) and (max-width: 1440px) {
   .escrita_exibição_imagem_pecas {
     top: 87%;
+  }
+  .imagem_exibição_nav { 
+    width: 175px;
   }
 }
 @media screen and (min-width: 768px) and (max-width: 1024px) {
