--- a/Estilos/quemsomos.css
+++ b/Estilos/quemsomos.css
@@ -59,7 +59,7 @@ div.card_home {
 }
 /* Container que abrange em volta das caixas*/
 #container_cards {
-  position: absolute;
+  position: relative;
   width: 100%;
   top: 40%;
   left: 50%;
@@ -124,5 +124,14 @@ p {
   }
   div.card_home {
     scale: 90%;
+  }
+  #container_cards {
+    position: absolute;
+    width: 100%;
+    top: 45%;
+    left: 50%;
+    transform: translate(-50%);
+    flex-wrap: wrap;
+    flex-direction: row;
   }
 }
