--- a/Estilos/quemsomos.css
+++ b/Estilos/quemsomos.css
@@ -35,8 +35,8 @@ header > a > img {
 /* Seletor geral dos cards da pagina */
 div.card_home {
   position: relative;
-  width: 20%;
-  height: 20%;
+  width: 280px;
+  height: 280px;
   margin-left: 50px;
   box-shadow: 0px 0px 3px rgba(0, 0, 0, 0.63);
   background-position: center;
@@ -116,7 +116,9 @@ p {
   text-decoration: underline;
 }
 @media screen and (min-width: 1024px) and (max-width: 1440px) {
-
+  div.card_home  { 
+    scale: 90%;
+  }
   #container_cards {
     position: absolute;
     width: 100%;
